<resources>
    <string name="app_name">Firebase Messenger</string>
    <string name="create_account">Create your account</string>
    <string name="login_account">Log in to your account</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="already_registered">Already registered? Log in</string>
    <string name="not_registered">Don\'t have an account? Sign up now</string>
    <string name="channel">Channel</string>
    <string name="message">Message</string>
    <string name="enter_message">Enter message</string>
    <string name="send_message">Send message</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
</resources>
